Fix alignment of button content

--- a/apps/authentication-server-ui/src/app/shared/components/button/button.component.scss
+++ b/apps/authentication-server-ui/src/app/shared/components/button/button.component.scss
@@ -3,7 +3,6 @@
 :host {
     display: flex;
     gap: 0.6rem;
-    align-items: center;
 
     font-size: inherit;
 
